--- a/channel_html_sources/channel_538.html
+++ b/channel_html_sources/channel_538.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-64523-krkg6p88-v1/imageContent-64523-krkg6p88-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Green Chillies TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Panchayat Ki Baithak</div>
 </div>
 
 <div id="jwplayerDiv"></div>
