--- a/channel_html_sources/channel_452.html
+++ b/channel_html_sources/channel_452.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-37210-jswmlty0-v2/imageContent-37210-jswmlty0-m2.PNG" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Jantantra TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Delhi Special</div>
 </div>
 
 <div id="jwplayerDiv"></div>
