--- a/channel_html_sources/channel_584.html
+++ b/channel_html_sources/channel_584.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-72315-l6htmt2o-v1/imageContent-72315-l6htmt2o-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Shri Babulnaath Temple, Mumbai</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Evening Aarti</div>
 </div>
 
 <div id="jwplayerDiv"></div>
