--- a/channel_html_sources/channel_532.html
+++ b/channel_html_sources/channel_532.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/NWS1ST_Thumbnail-v3/NWS1ST_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">News 1st Kannada</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Special Report</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
 </div>
 
 <div id="jwplayerDiv"></div>
