--- a/channel_html_sources/channel_351.html
+++ b/channel_html_sources/channel_351.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11930-j9l5hv1c-v1/imageContent-11930-j9l5hv1c-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Marathi HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Satvya Mulichi Satvi Mulgi</div>
 </div>
 
 <div id="jwplayerDiv"></div>
