--- a/channel_html_sources/channel_407.html
+++ b/channel_html_sources/channel_407.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12244-j9qq7k1c-v1/imageContent-12244-j9qq7k1c-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Sirippoli</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Vidiyum Varai Siringal</div>
 </div>
 
 <div id="jwplayerDiv"></div>
