--- a/channel_html_sources/channel_70.html
+++ b/channel_html_sources/channel_70.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-304-j5ji9otc-v2/imageContent-304-j5ji9otc-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Tata Play Javed Akhtar</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Paabat Bahut Talaas</div>
 </div>
 
 <div id="jwplayerDiv"></div>
