--- a/channel_html_sources/channel_302.html
+++ b/channel_html_sources/channel_302.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-21152-je6orzfk-v1/imageContent-21152-je6orzfk-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Colors Tamil</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Movie - Ellamey En Rasathan</div>
 </div>
 
 <div id="jwplayerDiv"></div>
