--- a/channel_html_sources/channel_499.html
+++ b/channel_html_sources/channel_499.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-55112-kd88u9so-v1/imageContent-55112-kd88u9so-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Sadhna News MP CG</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Ved Ayurveda</div>
 </div>
 
 <div id="jwplayerDiv"></div>
