--- a/channel_html_sources/channel_126.html
+++ b/channel_html_sources/channel_126.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-742-j5l50le0-v5/imageContent-742-j5l50le0-m7.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">SONY SPORTS TEN 2</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => UFC 307</div>
 </div>
 
 <div id="jwplayerDiv"></div>
