--- a/channel_html_sources/channel_127.html
+++ b/channel_html_sources/channel_127.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-739-j5l4y6yw-v5/imageContent-739-j5l4y6yw-m5.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">SONY SPORTS TEN 3</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => WWE Specials Bad Blood 2024</div>
 </div>
 
 <div id="jwplayerDiv"></div>
