--- a/channel_html_sources/channel_297.html
+++ b/channel_html_sources/channel_297.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11622-j9k0845k-v2/imageContent-11622-j9k0845k-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Nambikkai TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Rev. Joshua Devasahayam</div>
 </div>
 
 <div id="jwplayerDiv"></div>
