--- a/channel_html_sources/channel_35.html
+++ b/channel_html_sources/channel_35.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-123-j5fnf1fc-v1/imageContent-123-j5fnf1fc-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Sanskar</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Pujya Vasant Vijay ji Maharaj Live</div>
 </div>
 
 <div id="jwplayerDiv"></div>
